--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
             <a href="{{ site.baseurl }}/page">Page</a>
-            <a href="https://github.com/JustinLacy/JustinLacy.github.io/tree/master/_posts">admin</a>
+            <a href="https://github.com/JustinLacy/JustinLacy.github.io">admin</a>
           </nav>
         </header>
       </div>
