--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,10 @@
   <body>
     
     {% include sidebar.html %}
+
+    <div class="content container">
+      {{ content }}
+    </div>
     
     <div class="wrapper-masthead">
       <div class="container">
