--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,11 +35,11 @@
           <div class="container" >
          <div id="archives">
              browse by <a title="The complete archive of {{ site.name }}'s Notebook by category"
-                          href="{{ site.url}}{{site.baseurl}}/categoryview">category</a> or <a title="The complete archive of
+                          href="{{ site.url}}{{site.baseurl}}categoryview">category</a> or <a title="The complete archive of
      {{ site.name }}'s Notebook by month"
-     href="{{ site.url}}{{site.baseurl}}/monthview">date</a> or <a title="The complete archive of
+     href="{{ site.url}}{{site.baseurl}}monthview">date</a> or <a title="The complete archive of
      {{ site.name }}'s Notebook by tag"
-     href="{{ site.url}}{{site.baseurl}}/tagview">tag</a>
+     href="{{ site.url}}{{site.baseurl}}tagview">tag</a>
          </div>
          <div align="right">
        		<a href="https://github.com/hputnam/Putnam_Lab_Notebook/">admin</a>
