--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
      href="{{ site.url}}{{site.baseurl}}tagview">tag</a>
          </div>
          <div align="right">
-       		<a href="https://github.com/JustinLacy/JustinLacy.github.io/tree/master">admin</a>
+       		<a href="https://github.com/JustinLacy/JustinLacy.github.io">admin</a>
      </div>
    </div>
       </div>
