--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,8 +43,16 @@
          </div>
          <div align="right">
        		<a href="https://github.com/JustinLacy/JustinLacy.github.io">admin</a>
-     </div>
-   </div>
+      </div>
+    </div>
+
+    <img alt="GitHub last commit" src="https://img.shields.io/github/last-commit/AHuffmyer/ASH_Putnam_Lab_Notebook">
+    <img alt="GitHub commit activity" src="https://img.shields.io/github/commit-activity/m/AHuffmyer/ASH_Putnam_Lab_Notebook">
+
+    <script async src="https://cse.google.com/cse.js?cx=a6ecb068c305144c7">
+  </script>
+  <div class="gcse-search"></div>
+
       </div>
     </div>
 
